# django-react-flow-example

./: README.md
app/: data.yaml  pyproject.toml
app/example/: settings.py  urls.py
